--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@types/react-router-dom": "^5.3.3",
     "@types/three": "^0.136.1",
     "nodemon": "^2.0.15"
   },
@@ -15,9 +16,9 @@
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
     "paper": "^0.12.15",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
