--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@types/react-transition-group": "^4.4.4",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -14,11 +16,13 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
-    "paper": "^0.12.15",
+    "framer-motion": "^6.2.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
+    "react-transition-group": "^4.4.2",
+    "save": "^2.4.0",
     "scrollmagic": "^2.0.8",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
