--- a/package.json
+++ b/package.json
@@ -4,11 +4,9 @@
   "private": true,
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
-    "@types/react-transition-group": "^4.4.4",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
-    "-": "^0.0.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -18,12 +16,10 @@
     "@types/react-dom": "^17.0.11",
     "framer-motion": "^6.2.3",
     "react": "^17.0.1",
+    "react-animation-on-scroll": "^2.1.0",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
-    "react-transition-group": "^4.4.2",
-    "save": "^2.4.0",
-    "scrollmagic": "^2.0.8",
     "styled-components": "^5.3.3",
     "typescript": "^4.5.4",
     "web-vitals": "^2.1.3"
