--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "@types/react-lottie": "^1.2.6",
     "@types/react-router-dom": "^5.3.3",
     "nodemon": "^2.0.15"
   },
@@ -19,6 +20,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-gsap": "^3.2.1",
+    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-scrollmagic": "^2.3.0",
