--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "@lottiefiles/react-lottie-player": "^3.4.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
@@ -20,7 +21,6 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-gsap": "^3.2.1",
-    "react-lottie": "^1.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.0",
     "react-scrollmagic": "^2.3.0",
