--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.11.21",
     "@types/react": "^17.0.38",
     "@types/react-dom": "^17.0.11",
+    "@types/react-scroll": "^1.8.3",
     "framer-motion": "^6.2.3",
     "gsap": "^3.9.1",
     "react": "^17.0.1",
