--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "devDependencies": {
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.22",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
